--- a/app/src/main/res/layout/fragment_convert_input.xml
+++ b/app/src/main/res/layout/fragment_convert_input.xml
@@ -5,7 +5,7 @@
     android:padding="10dp"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.ConvertInputFragment">
+    tools:context=".view.convert.ConvertInputFragment">
 
    <EditText
        android:id="@+id/edtInputValue"
