--- a/app/src/main/res/layout/activity_convert_history.xml
+++ b/app/src/main/res/layout/activity_convert_history.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ConvertHistoryActivity">
+    tools:context=".view.history.ConvertHistoryActivity">
 
     <ListView
         android:id="@+id/lvHistories"
