--- a/app/src/main/res/layout/fragment_convert_output.xml
+++ b/app/src/main/res/layout/fragment_convert_output.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.ConvertOutputFragment">
+    tools:context=".view.convert.ConvertOutputFragment">
 
     <TextView
         android:id="@+id/value"
